--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/figs/realization_dim1_tikz.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/figs/realization_dim1_tikz.tex
@@ -7,5 +7,5 @@
   \arrow["{*_{\mathbb{M}_1}}", from=1-2, to=2-2]
   \arrow["{h_1}"', shorten <=14pt, shorten >=14pt, Rightarrow, from=2-1, to=1-2]
   \arrow[from=2-1, to=2-2]
-  \arrow["\ulcorner"{anchor=center, pos=0.125, rotate=180}, shift right=3, draw=none, from=2-2, to=1-1]
+  \arrow["\ulcorner"{pos=0, rotate=180}, shift left=1, draw=none, from=2-2, to=1-1]
 \end{tikzcd}
