--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/dgt_talk.tex
@@ -63,6 +63,93 @@ To use HoTT to study \alert{connections} and \alert{explain} their applicability
 \end{itemize}
 \end{frame}
 
+\begin{frame}
+\begin{theorem}[Gauss-Bonnet]
+Let \( M \) be a compact 2-manifold with metric, without boundary. Let \( K \) be the Gaussian curvature of \( M \) and let \( \chi(M) \) be the Euler characteristic. Then \[\frac{1}{2\pi}\int_M K dA=\chi(M).\]
+\end{theorem}
+\end{frame}
+
+\begin{frame}
+\begin{theorem}[Poincaré-Hopf]
+Let \( M \) be a compact smooth manifold without boundary. Let \( X \) be a vector field on \( M \) with isolated zeroes \( x_1,\ldots,x_n \). Then \vspace{-10pt}\[\sum_{i=1}^{n} \mathrm{index}_{x_i}=\chi(M).\]\vspace{-10pt}
+\end{theorem}
+\vspace{-40pt}
+% RADIAL OUTWARD
+\begingroup
+\colorlet{veccol}{cmu_red}
+\colorlet{myblue}{blue!60!black}
+\tikzstyle{vector}=[->,thick,veccol,style={-{Stealth[scale=0.9]}}]
+\pgfmathsetmacro{\R}{1}%
+\pgfmathsetmacro{\r}{0.03}%
+\pgfmathsetmacro{\N}{8}%
+\pgfmathsetmacro{\ang}{60}%
+\pgfmathsetmacro{\RR}{0.5}%
+\[
+% zero
+\onslide<2->{
+\begin{tikzpicture}
+  \fill[myblue] (0,0) circle (\r);
+  \foreach \x/\y in {-1/0,-1/1,0/1,1/1,1/0,-1/-1,0/-1,1/-1}{
+    \draw[vector] (\x*0.5*\R,\y*0.5*\R) ++ (\ang-180:\R/2) --++ (\ang:\R);
+  }
+  \node at (0,-1.35*\R) {index 0};
+\end{tikzpicture}}
+\onslide<3->{
+% outward
+\begin{tikzpicture}
+  \fill[myblue] (0,0) circle (\r);
+  \foreach \i [evaluate={\ang=\i*360/\N;}] in {0,...,\N}{
+    \draw[vector] (\ang:0.1*\R) --++ (\ang:\R);
+  }
+  \node at (0,-1.35*\R) {index +1};
+\end{tikzpicture}
+% inward
+\begin{tikzpicture}
+  \fill[myblue] (0,0) circle (\r);
+  \foreach \i [evaluate={\ang=\i*360/\N;}] in {0,...,\N}{
+    \draw[vector] (\ang:1.1*\R) -- (\ang:0.1*\R);
+  }
+  \node at (0,-1.35*\R) {index +1};
+\end{tikzpicture}
+% counterclock
+\begin{tikzpicture}
+  \fill[myblue] (0,0) circle (\r);
+  \foreach \R in {0.44,0.88}{
+    \foreach \i [evaluate={\ang=\i*360/\N;}] in {1,...,\N}{
+      \draw[vector] (\ang:\R) --++ (\ang+90:\RR);
+    }
+  }
+  \node at (0,-1.3*\R) {index +1};
+\end{tikzpicture}
+% clockwise
+\begin{tikzpicture}
+  \fill[myblue] (0,0) circle (\r);
+  \foreach \R in {0.44,0.88}{
+    \foreach \i [evaluate={\ang=\i*360/\N;}] in {1,...,\N}{
+      \draw[vector] (\ang:\R) --++ (\ang-90:\RR);
+    }
+  }
+  \node at (0,-1.3*\R) {index +1};
+\end{tikzpicture}}
+\onslide<4->{
+% minus one
+\pgfmathsetmacro{\r}{0.03}%
+\pgfmathsetmacro{\N}{20}%
+\pgfmathsetmacro{\ang}{10}%
+\begin{tikzpicture}
+  \fill[myblue] (0,0) circle (\r);
+  \foreach \R in {0.88}{
+    \foreach \i [evaluate={\ang=\i*360/\N;}] in {1,...,\N}{
+      \draw[vector] (\ang:\R) --++ (-\ang-90:\RR);
+    }
+  }
+  \node at (0,-1.3*\R) {index --1};
+\end{tikzpicture}}
+\]
+\endgroup
+% \includegraphics[width=420pt]{figs/needham_indexes.pdf}
+\end{frame}
+
 % \begin{frame}
 % I was guided by these pseudo-methods:
 % \begin{itemize}
@@ -128,7 +215,7 @@ A \alert{Hasse diagram} of a simplicial complex (vertices named for the colors o
 \end{frame}
 
 \begin{frame}{Higher realization}
-Form a pushout of edges to create a 1-type.
+Let \( M\defeq [M_0,M_1,M_2] \) be a simplicial complex. Form a type \( \mm\defeq \mm_0\to\mm_1\to\mm_2 \) with pushouts.
 \[\input{figs/realization_dim1_tikz.tex}\]
 \( \partial\Delta^1 \) is a 0-sphere: the set \( \{a, b\} \).
 \end{frame}
@@ -188,6 +275,13 @@ The \defemph{link} of a vertex \( v \) in a 2-complex is the polygon of edges no
 This will be our model of the tangent space.
 \end{column}
 \end{columns}
+\end{frame}
+
+\begin{frame}
+\begin{theorem}[Whitehead (1940)]
+Every smooth manifold has a compatible structure of a \alert{combinatorial manifold}: a simplicial complex of dimension \( n \) such that the link is the geometric realization of an \( (n-1) \)-sphere.
+\end{theorem}
+\url{https://ncatlab.org/nlab/show/triangulation+theorem}
 \end{frame}
 
 \begin{frame}
