--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/figs/face_swirl_tikz.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/figs/face_swirl_tikz.tex
@@ -19,6 +19,10 @@
     \node [ii, below left=\mylin of  V1,  label=below left:\( v_{13} \)] (V13) {};
     \node [ii, above left= \mylin of V1,  label=above left: \( v_{14} \)] (V14) {};
 
+    \node [left=1.3\mylin of  V1,  label=center:\( T_1 \)] {};
+    \node [right=1.3\mylin of  V2,  label=center:\( T_2 \)] {};
+    \node [left=1.3\mylin of  V3,  label=center:\( T_3 \)] {};
+
     \node [ii, above right=\mylin of V2, label=above right:\( v_{21} \)] (V21) {};
     \node [ii, below right=\mylin of V2,  label=below right:\( v_{22} \)] (V22) {};
     \node [ii, below left=\mylin of  V2, label=below left:\( v_{23} \)] (V23) {};
