--- a/differential_geometry_in_hott/latex/discrete_gauge_theory/figs/discrete_gauge_theory_oo_transport_tikz.tex
+++ b/differential_geometry_in_hott/latex/discrete_gauge_theory/figs/discrete_gauge_theory_oo_transport_tikz.tex
@@ -8,7 +8,7 @@
   eqedge/.style={very thick},
   edge/.style={black, thin},
   r/.style={red},
-  facet/.style={fill=blue!95!black,fill opacity=0.0},
+  facet/.style={fill=blue!95!black,fill opacity=0.1},
   vertex/.style={inner sep=1pt,circle,draw=green!25!black,fill=black,thick}]
 \coordinate (-1, -1, 0) at (-1, -1, 0);
 \coordinate (-1, 1, 0) at (-1, 1, 0);
@@ -27,10 +27,10 @@
 \node[vertex] at (-1, -1, 0)     {};
 %% Drawing the facets
 %%
-\fill[facet] (1, 1, 0) -- (0, 0, -1.4) -- (1, -1, 0) -- cycle {};
-\fill[facet] (1, 1, 0) -- (0, 0, 1.4) -- (1, -1, 0) -- cycle {};
+%\fill[facet] (1, 1, 0) -- (0, 0, -1.4) -- (1, -1, 0) -- cycle {};
+%\fill[facet] (1, 1, 0) -- (0, 0, 1.4) -- (1, -1, 0) -- cycle {};
 \fill[facet] (1, 1, 0) -- (-1, 1, 0) -- (0, 0, 1.4) -- cycle {};
-\fill[facet] (1, 1, 0) -- (-1, 1, 0) -- (0, 0, -1.4) -- cycle {};
+%\fill[facet] (1, 1, 0) -- (-1, 1, 0) -- (0, 0, -1.4) -- cycle {};
 %% Drawing edges in the front
 %%
 \draw[edge] (-1, 1, 0) -- (0, 0, -1.4);
@@ -62,7 +62,7 @@
   eqedge/.style={very thick},
   r/.style={red},
   edge/.style={black, thin},
-  facet/.style={fill=blue!95!black,fill opacity=0.0},
+  facet/.style={fill=blue!95!black,fill opacity=0.1},
   vertex/.style={inner sep=1pt,circle,draw=green!25!black,fill=black,thick}]
 \coordinate (-1, -1, 0) at (-1, -1, 0);
 \coordinate (-1, 1, 0) at (-1, 1, 0);
@@ -81,10 +81,10 @@
 \node[vertex] at (-1, -1, 0)     {};
 %% Drawing the facets
 %%
-\fill[facet] (1, 1, 0) -- (0, 0, -1.4) -- (1, -1, 0) -- cycle {};
-\fill[facet] (1, 1, 0) -- (0, 0, 1.4) -- (1, -1, 0) -- cycle {};
+% \fill[facet] (1, 1, 0) -- (0, 0, -1.4) -- (1, -1, 0) -- cycle {};
+% \fill[facet] (1, 1, 0) -- (0, 0, 1.4) -- (1, -1, 0) -- cycle {};
 \fill[facet] (1, 1, 0) -- (-1, 1, 0) -- (0, 0, 1.4) -- cycle {};
-\fill[facet] (1, 1, 0) -- (-1, 1, 0) -- (0, 0, -1.4) -- cycle {};
+% \fill[facet] (1, 1, 0) -- (-1, 1, 0) -- (0, 0, -1.4) -- cycle {};
 %% Drawing edges in the front
 %%
 \draw[edge] (-1, 1, 0) -- (0, 0, -1.4);
@@ -116,7 +116,7 @@
   eqedge/.style={very thick},
   r/.style={red},
   edge/.style={black, thin},
-  facet/.style={fill=blue!95!black,fill opacity=0.0},
+  facet/.style={fill=blue!95!black,fill opacity=0.1},
   vertex/.style={inner sep=1pt,circle,draw=green!25!black,fill=black,thick}]
 \coordinate (-1, -1, 0) at (-1, -1, 0);
 \coordinate (-1, 1, 0) at (-1, 1, 0);
@@ -135,10 +135,10 @@
 \node[vertex] at (-1, -1, 0)     {};
 %% Drawing the facets
 %%
-\fill[facet] (1, 1, 0) -- (0, 0, -1.4) -- (1, -1, 0) -- cycle {};
-\fill[facet] (1, 1, 0) -- (0, 0, 1.4) -- (1, -1, 0) -- cycle {};
+% \fill[facet] (1, 1, 0) -- (0, 0, -1.4) -- (1, -1, 0) -- cycle {};
+% \fill[facet] (1, 1, 0) -- (0, 0, 1.4) -- (1, -1, 0) -- cycle {};
 \fill[facet] (1, 1, 0) -- (-1, 1, 0) -- (0, 0, 1.4) -- cycle {};
-\fill[facet] (1, 1, 0) -- (-1, 1, 0) -- (0, 0, -1.4) -- cycle {};
+% \fill[facet] (1, 1, 0) -- (-1, 1, 0) -- (0, 0, -1.4) -- cycle {};
 %% Drawing edges in the front
 %%
 \draw[eqedge] (-1, 1, 0) -- (0, 0, -1.4);
@@ -170,7 +170,7 @@
   eqedge/.style={very thick},
   edge/.style={black, thin},
   r/.style={red},
-  facet/.style={fill=blue!95!black,fill opacity=0.0},
+  facet/.style={fill=blue!95!black,fill opacity=0.1},
   vertex/.style={inner sep=1pt,circle,draw=green!25!black,fill=black,thick}]
 \coordinate (-1, -1, 0) at (-1, -1, 0);
 \coordinate (-1, 1, 0) at (-1, 1, 0);
@@ -189,10 +189,10 @@
 \node[vertex] at (-1, -1, 0)     {};
 %% Drawing the facets
 %%
-\fill[facet] (1, 1, 0) -- (0, 0, -1.4) -- (1, -1, 0) -- cycle {};
-\fill[facet] (1, 1, 0) -- (0, 0, 1.4) -- (1, -1, 0) -- cycle {};
+% \fill[facet] (1, 1, 0) -- (0, 0, -1.4) -- (1, -1, 0) -- cycle {};
+% \fill[facet] (1, 1, 0) -- (0, 0, 1.4) -- (1, -1, 0) -- cycle {};
 \fill[facet] (1, 1, 0) -- (-1, 1, 0) -- (0, 0, 1.4) -- cycle {};
-\fill[facet] (1, 1, 0) -- (-1, 1, 0) -- (0, 0, -1.4) -- cycle {};
+% \fill[facet] (1, 1, 0) -- (-1, 1, 0) -- (0, 0, -1.4) -- cycle {};
 %% Drawing edges in the front
 %%
 \draw[edge] (-1, 1, 0) -- (0, 0, -1.4);
